--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<title>Memulai dengan HTML</title>
-<h1>Hello world</h1>
+<head>
+  <title>Memulai dengan HTML</title>
+</head>
+<body>
+  <h1>Hello word</h1>
+</body>
